--- a/eventservice/pages/templates/events/event_edit.html
+++ b/eventservice/pages/templates/events/event_edit.html
@@ -6,7 +6,7 @@
 	<div class="text-center">
         <div class="compose" style="text-decoration: none;"><a href="#">Posting as, <b>{{request.user}}!</b></a></div>
     </div>
-    <div class="posts"><form method="POST" class="token" autocomplete="off">{% csrf_token %}
+    <div class="events"><form method="EVENTS" class="token" autocomplete="off">{% csrf_token %}
     	<br>
         {{ form|crispy }}
         <center><button type="submit" class="submit">POST</button></center>
