--- a/eventservice/pages/templates/events/add_comment_to_event.html
+++ b/eventservice/pages/templates/events/add_comment_to_event.html
@@ -2,9 +2,17 @@
 {% load crispy_forms_tags %}
 {% block content %}
 <div class="comment-submit-form">
-    <form method="EVENT" class="post-form">{% csrf_token %}
-                    {{ form|crispy }}
-                    <button type="submit" class="btn btn-outline-primary">Add Comment</button>
-                </form>
-    </div>
-    {% endblock %}
+    <form method="POST" class="event-form">{% csrf_token %}
+        {{ form|crispy }}
+        <button type="submit" class="btn btn-outline-primary">Add Comment</button>
+    ////////////////////////////method="post" enctype="multipart/form-data">
+       {% csrf_token %}
+       {{ form.as_p }}
+        <button type="submit">Upload</button>
+    </form>
+    {% if img_obj %}
+        <h3>Succesfully uploaded : {{img_obj.title}}</h3>
+        <img src="{{ img_obj.image.url}}" alt="connect" style="max-height:300px">
+    {% endif %}
+</div>
+{% endblock %}
