--- a/eventservice/pages/templates/events/base.html
+++ b/eventservice/pages/templates/events/base.html
@@ -49,7 +49,7 @@
 <div class="cevents">
     <div class="greetings-banner">
         <h2><a href="/login">LOGIN</a> / <a href="/register">CREATE</a> ACCOUNT</h2>
-        <div class="text"><p>Please login or create new account!</p>
+        <div class="text"><p>Please login or create new account if you want to post event!</p>
             <a class="github-button" href="https://github.com/MVAIT/event_aggregation_service" data-color-scheme="no-preference: dark; light: dark; dark: dark;" data-size="large" aria-label="Follow @VAIT on GitHub"> Open on GitHub </a></div>
         </div>
 </div>
