--- a/eventservice/pages/templates/events/event_detail.html
+++ b/eventservice/pages/templates/events/event_detail.html
@@ -1,5 +1,6 @@
 {% extends 'events/base.html' %}
 {% block content %}
+
 <div class="cevents">
     <div class="blockquote text-center">
         <div class="events">
@@ -15,8 +16,8 @@
                 </div>
                 {% endif %}
                 <div class="date">
-                    <p>Event start date - {{event.start_date|date:"Y m j"}}</p>
-                    <p>Event end date - {{event.end_date|date:"Y m j"}}</p>
+                    <p>Event start date - {{events.start_date|date:"Y m j"}}</p>
+                    <p>Event end date - {{events.end_date|date:"Y m j"}}</p>
                 </div>
                 <div class="text">
                     <p>Location - {{events.location|linebreaksbr|urlize}}</p>
@@ -49,4 +50,5 @@
             {% endfor %}
 </div>
 </div>
+
 {% endblock %}
