fix delete error

--- a/eventservice/pages/templates/events/events_confirm_delete.html
+++ b/eventservice/pages/templates/events/events_confirm_delete.html
@@ -13,7 +13,7 @@
                     <div class="delete-popup">
                         <p> Are you sure?</p>
                         <p><button class="btn btn-outline-danger mr-2" type="submit">DELETE EVENT</button>
-                        <a class="btn btn-outline-secondary" href="{% url 'events_detail' pk=events.pk %}">Cancel</a></p>
+                        <a class="btn btn-outline-secondary" href="{% url 'event_detail' pk=events.pk %}">Cancel</a></p>
                     </div>
                     </form>
                 <div class="text">
